SFDCProject/src/objects/Facility_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Generation_Asset__c</fullName>
        <label>Generation Asset</label>
        <referenceTo>Generation_Assets__c</referenceTo>
        <relationshipLabel>Facility Configurations</relationshipLabel>
        <relationshipName>Facility_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Panels__c</fullName>
        <label>Number of Panels</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <label>Panel Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Facility Configurations</relationshipLabel>
        <relationshipName>Facility_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Facility Configuration</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Facility Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>